test/spec_vectors/conversions/fail/module_1.wat
(module (func (result i32) (i32.wrap_i64 (f32.const 0))))